Agora os botões respondem de acordo.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Cronometro</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="content-box">
@@ -14,12 +16,14 @@
 
             <h1 id="cronometro">0</h1>
 
-            <button id="iniciarContagem" onclick="contadorFunction()">Iniciar</button>
-            <button id="pausarContagem"  onclick="contadorPausar()">Pausar</button>
-            <button id="resetarContagem" onclick="contadorResetar()">Resetar</button>
+            <button class="buttonsWatch buttonHover" id="iniciarContagem" onclick="contadorFunction()">Iniciar</button>
+            <button class="buttonsWatch buttonHover" id="pausarContagem" onclick="contadorPausar()">Pausar</button>
+            <button class="buttonsWatch buttonHover" id="resetarContagem" onclick="contadorResetar()">Resetar</button>
+            <footer>Todos os direitos reservados.</footer>
         </div>
-      </div>
+    </div>
 </body>
 
 <script src="script.js"></script>
+
 </html>
