Footer e botões organizados.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 
             <h1 id="cronometro">0</h1>
 
-            <button class="buttonsWatch buttonHover" id="iniciarContagem" onclick="contadorFunction()">Iniciar</button>
-            <button class="buttonsWatch buttonHover" id="pausarContagem" onclick="contadorPausar()">Pausar</button>
-            <button class="buttonsWatch buttonHover" id="resetarContagem" onclick="contadorResetar()">Resetar</button>
+            <div id="botoes">
+                <button class="buttonsWatch buttonHover" id="iniciarContagem"
+                    onclick="contadorFunction()">Iniciar</button>
+                <button class="buttonsWatch buttonHover" id="pausarContagem" onclick="contadorPausar()">Pausar</button>
+                <button class="buttonsWatch buttonHover" id="resetarContagem"
+                    onclick="contadorResetar()">Resetar</button>
+            </div>
             <footer>Todos os direitos reservados.</footer>
         </div>
     </div>
